===
0.9.7 / 2011-09-19

* Added import_id to initialize signature

=== 0.9.2 / 2010-04-20

* Created Gem version of basic library functionality
