@@ -1,0 +1,4 @@
+source :gemcutter
+
+# Specify your gem's dependencies in my.gemspec
+gemspec
