@@ -3,7 +3,3 @@ require File.expand_path(File.dirname(__FILE__) + '/cloudsponge/contact')
 require File.expand_path(File.dirname(__FILE__) + '/cloudsponge/event')
 require File.expand_path(File.dirname(__FILE__) + '/cloudsponge/cs_exception')
 require File.expand_path(File.dirname(__FILE__) + '/cloudsponge/utility')
-
-module Cloudsponge
-  VERSION = '0.9.6'
-end
