@@ -1,0 +1,3 @@
+module Cloudsponge
+  VERSION = "0.9.7"
+end
