@@ -1,5 +1,4 @@
-require "test/unit"
-require File.dirname(__FILE__) + "/../lib/cloudsponge"
+require 'test/test_helper'
 
 class TestContactImporter < Test::Unit::TestCase
   def test_version_exists
@@ -10,25 +9,31 @@ class TestContactImporter < Test::Unit::TestCase
   DOMAIN_PASSWORD = "Your Domain Password"
   
   def test_u_p_import
-    contacts = nil
     importer = Cloudsponge::ContactImporter.new(DOMAIN_KEY, DOMAIN_PASSWORD)
-    importer.begin_import('AOL', 'username', 'password')
-    loop do
-      events = importer.get_events
-      break unless events.select{ |e| e.is_error? }.empty?
-      unless events.select{ |e| e.is_complete? }.empty?
-        contacts = importer.get_contacts
-        break
-      end
-    end
+    importer.begin_import('AOL', 'u', 'p')
+    contacts = events_wait(importer)
     assert contacts
   end
-
+  
   def test_auth_import
-    contacts = nil
     importer = Cloudsponge::ContactImporter.new(DOMAIN_KEY, DOMAIN_PASSWORD)
     resp = importer.begin_import('YAHOO')
     puts "Navigate to #{resp[:consent_url]} and complete the authentication process."
+    contacts = events_wait(importer)
+    assert contacts
+  end
+  
+  def test_contacts_with_mailing_addresses
+    importer = Cloudsponge::ContactImporter.new(DOMAIN_KEY, DOMAIN_PASSWORD, nil, {"include" => "mailing_address"})
+    importer.begin_import('AOL', 'u', 'p')
+    contacts = events_wait(importer)
+    assert contacts[0].detect{ |contact| contact.addresses }
+  end
+  
+  private
+  
+  def events_wait(importer)
+    contacts = nil
     loop do
       events = importer.get_events
       break unless events.select{ |e| e.is_error? }.empty?
@@ -36,7 +41,8 @@ class TestContactImporter < Test::Unit::TestCase
         contacts = importer.get_contacts
         break
       end
+      sleep 1
     end
-    assert contacts
+    contacts
   end
 end
