@@ -1,0 +1,5 @@
+require "test/unit"
+require "cloudsponge"
+require 'rubygems'
+require 'ruby-debug'
+
