@@ -1,6 +1,7 @@
 ===
 0.9.7 / 2011-09-19
 
+* Added options to initialize and begin_import signatures
 * Added import_id to initialize signature
 
 === 0.9.2 / 2010-04-20
